--- a/src/main/resources/lang/en-PT/en-PT.txt
+++ b/src/main/resources/lang/en-PT/en-PT.txt
@@ -59,14 +59,16 @@ ecoInsolvent=Lacking booty ya strumpet!
 #Terminology
 gate=Port
 network=Ship
-interServer=Transcontinental
+interserver=Transcontinental
 default=Homeland
 terminal=Market
 personal=Yer own
 
 #Temporary
-unimplementedInterServer=The crew be workin' on ye ship still, ya blimey toad rat
+unimplementedInterserver=The crew be workin' on ye ship still, ya blimey toad rat
 unimplementedFlag=The %flags% flags can't been hoisted
+
+#Parity
 
 #Admin
 adminReload=Ship repainted, arr!
