--- a/src/main/resources/lang/sv-SE/sv-SE.txt
+++ b/src/main/resources/lang/sv-SE/sv-SE.txt
@@ -57,8 +57,11 @@ ecoObtain=Erhöll %cost% från StarGate %portal%!
 ecoInsolvent=Inte tillräckligt med pengar.
 
 #Terminology
+gate=Port
 
 #Temporary
+
+#Parity
 
 #Admin
 adminReload=Konfigurationen laddades om!
