--- a/src/main/resources/lang/lol/lol-US.txt
+++ b/src/main/resources/lang/lol/lol-US.txt
@@ -26,6 +26,7 @@ faultExists=A GATE BY DAT NAYM ALREADY EXISTS!
 faultFull=DAT NETWORK IZ FULL!
 faultWorldDeny=U NO HAV ACCES 2 WURLD %world%!
 faultConflict=DIS GATE CONFLICTS WIF AN EXISTIN GATE.
+faultConflictNetwork=UNABLE 2 FORCEFULLY SPECIFY NETWORK TYPE; IT WUD CONFLICT WIF TEH %type% NETWORK OV TEH SAME NAYM!
 faultFlag=U LACK PERMISHUN 2 USE TEH %flags% FLAGS; UR PORTAL HAS BEEN CREATD WITHOUT THEM!
 faultControls=DIS GATEZ DESIGN HAS 2 FEW CONTROL BLOCKZ 2 ACCOMMODATE TEH FLAGS U HAS SELECTD!
 faultAddon=AN ADD-ON HAS PREVENTD U FRUM DOIN DAT!
@@ -72,6 +73,7 @@ unimplementedIConflict=TEH %name% %type1% NETWORK HAS BEEN TEMPORARILY SEPARATD 
 unimplementedFlag=TEH %flags% FLAGS HAS NOT YET BEEN IMPLEMENTD.
 
 #Parity
+parityCommand=AUTOMATICALLY INSTALLIN TEH %modules% MODULE(S)! DIS CUD TAEK FEW MINUTEZ.
 
 #Admin
 adminReload=CONFIGURASHUN RELOADD!
